# src/Whisparr.Api.V3/Wanted/MissingController.cs
@@ -1,5 +1,3 @@
-using System;
-using System.Collections.Generic;
 using Microsoft.AspNetCore.Mvc;
 using NzbDrone.Core.CustomFormats;
 using NzbDrone.Core.Datastore;
@@ -29,15 +27,13 @@ namespace Whisparr.Api.V3.Wanted
         public PagingResource<EpisodeResource> GetMissingEpisodes([FromQuery] PagingRequestResource paging, bool includeSeries = false, bool includeImages = false, bool monitored = true)
         {
             var pagingResource = new PagingResource<EpisodeResource>(paging);
-            var pagingSpec = pagingResource.MapToPagingSpec<EpisodeResource, Episode>(
-                new HashSet<string>(StringComparer.OrdinalIgnoreCase)
-                {
-                    "episodes.airDateUtc",
-                    "episodes.lastSearchTime",
-                    "series.sortTitle"
-                },
-                "episodes.airDateUtc",
-                SortDirection.Ascending);
+            var pagingSpec = new PagingSpec<Episode>
+            {
+                Page = pagingResource.Page,
+                PageSize = pagingResource.PageSize,
+                SortKey = pagingResource.SortKey,
+                SortDirection = pagingResource.SortDirection
+            };
 
             if (monitored)
             {
