# src/Whisparr.Api.V3/openapi.json
@@ -1850,22 +1850,6 @@
             }
           },
           {
-            "name": "includeSeries",
-            "in": "query",
-            "schema": {
-              "type": "boolean",
-              "default": false
-            }
-          },
-          {
-            "name": "includeEpisodeFile",
-            "in": "query",
-            "schema": {
-              "type": "boolean",
-              "default": false
-            }
-          },
-          {
             "name": "includeImages",
             "in": "query",
             "schema": {
@@ -5211,35 +5195,6 @@
         }
       }
     },
-    "/api/v3/qualitydefinition/limits": {
-      "get": {
-        "tags": [
-          "QualityDefinition"
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/QualityDefinitionLimitsResource"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/QualityDefinitionLimitsResource"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/QualityDefinitionLimitsResource"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/api/v3/qualityprofile": {
       "post": {
         "tags": [
@@ -8263,11 +8218,6 @@
           "releaseDate": {
             "$ref": "#/components/schemas/DateOnly"
           },
-          "lastSearchTime": {
-            "type": "string",
-            "format": "date-time",
-            "nullable": true
-          },
           "runtime": {
             "type": "integer",
             "format": "int32"
@@ -10150,20 +10100,6 @@
         },
         "additionalProperties": false
       },
-      "QualityDefinitionLimitsResource": {
-        "type": "object",
-        "properties": {
-          "min": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "max": {
-            "type": "integer",
-            "format": "int32"
-          }
-        },
-        "additionalProperties": false
-      },
       "QualityDefinitionResource": {
         "type": "object",
         "properties": {
@@ -10269,10 +10205,6 @@
             "format": "int32"
           },
           "cutoffFormatScore": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "minUpgradeFormatScore": {
             "type": "integer",
             "format": "int32"
           },
@@ -11856,7 +11788,7 @@
       },
       "apikey": {
         "type": "apiKey",
-        "description": "Apikey passed as query parameter",
+        "description": "Apikey passed as header",
         "name": "apikey",
         "in": "query"
       }
